classDiagram
  class Person {
    +String name
    +String email
    +Date dateOfBirth
    +displayPersonalData()
  }

  class Employee {
    +double salary
  }
  Person <|-- Employee

  class Admin {
    +String password
    +addCustomer(...)
    +addAdmin(...)
    +addTech(...)
    +createCampaign(...)
    +showCustomerInfo(...)
    +showCustomers()
    +showAdminInfo()
    +listItems()
    +showItemsLowOnStock(maxStock)
    +showVIPCustomers()
  }
  Employee <|-- Admin

  class Technician {
    +boolean isSenior
    +addItem(...)
    +displayItemInfo(...)
    +showOrders()
    +listItems()
    +showItemsLowOnStock(maxStock)
    +showVIPCustomers()
  }
  Employee <|-- Technician

  class Customer {
    +int customerID
    +String password
    +double balance
    +Status status
    +ShoppingCart cart
    +List~Order~ orderHistory
    +changePassword(oldP,newP)
    +depositMoney(amount)
    +addToCart(itemID)
    +emptyCart()
    +placeOrder(password)
    +viewActiveCampaigns()
    +toString()
    -- static --
    +static double SILVER_LIMIT
    +static double GOLDEN_LIMIT
    +static double SILVER_DISCOUNT
    +static double GOLDEN_DISCOUNT
  }
  Person <|-- Customer

  class Item {
    +int itemID
    +double price
    +int stock
    +String type
    +getPriceAfterCampaign(campaign)
  }

  class Cosmetic {
    +String manufacturer
    +String brand
    +boolean isOrganic
    +int expirationYear
    +double weight
  }
  class Electronic {
    +String manufacturer
    +String brand
    +int maxVolt
    +int maxWatt
  }
  class OfficeSupply {
    +int releaseDate
    +String coverTitle
  }

  Item <|-- Cosmetic
  Item <|-- Electronic
  Item <|-- OfficeSupply

  %% Cosmetic subclasses
  class Perfume {
    +int lastingDuration
  }
  class HairCare {
    +boolean isMedicated
  }
  class SkinCare {
    +boolean babySensitive
  }
  Cosmetic <|-- Perfume
  Cosmetic <|-- HairCare
  Cosmetic <|-- SkinCare

  %% Electronic subclasses
  class Computer {
    +String operatingSystem
    +String CPUType
    +int ramCapacity
    +int HDDCapacity
  }
  class TV {
    +int screenSize
  }
  class SmartPhone {
    +String screenType
  }
  Electronic <|-- Computer
  Electronic <|-- TV
  Electronic <|-- SmartPhone

  class Desktop {
    +String boxColor
  }
  class Laptop {
    +boolean hasHDMI
  }
  class Tablet {
    +String dimensions
  }
  Computer <|-- Desktop
  Computer <|-- Laptop
  Computer <|-- Tablet

  %% Office supply subclasses
  class Book {
    +String publisher
    +List~String~ authors
    +int pageNumber
  }
  class CDDVD {
    +String composer
    +List~String~ songs
  }
  OfficeSupply <|-- Book
  OfficeSupply <|-- CDDVD

  class ShoppingCart {
    +List~Item~ items
    +addItem(Item)
    +clear()
    +getTotal()
  }

  class Order {
    +Date orderDate
    +double totalCost
    +List~Item~ purchasedItems
    +int customerID
  }

  class Campaign {
    +Date startDate
    +Date endDate
    +String itemType
    +double discountRate
    +static double MAX_DISCOUNT_RATE
  }

  class MyBazaar {
    +List~Person~ users
    +List~Item~ items
    +List~Campaign~ campaigns
    +List~Order~ orders
    +processCommand(...)
    +findUser(...)
    +findItem(...)
    +listItems()
    +showItemsLowOnStock(maxStock)
    +showVIPCustomers()
    +showCampaignsForCustomer(customerID)
    +showAllOrders()
  }

  %% Associations
  Customer "1" o-- "1" ShoppingCart : has
  Customer "1" o-- "*" Order : orderHistory
  Order "*" o-- "*" Item : contains
  MyBazaar "1" o-- "*" Person : users
  MyBazaar "1" o-- "*" Item : items
  MyBazaar "1" o-- "*" Campaign : campaigns
  MyBazaar "1" o-- "*" Order : orders
